os-tutorial/target/riscv64gc-unknown-none-elf/debug/build/num-traits-730acbed38946f53/stderr
error[E0463]: can't find crate for `std`
  |
  = note: the `riscv64gc-unknown-none-elf` target may not be installed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
error[E0599]: no method named `to_int_unchecked` found for type `f64` in the current scope
 --> <anon>:2:40
  |
2 | pub fn probe() { let _ = unsafe { 1f64.to_int_unchecked::<i32>() }; }
  |                                        ^^^^^^^^^^^^^^^^ method not found in `f64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
